# Scottish-Power-Take-Home

./: .gitignore  IMPLEMENTATION_PLAN.md  PHASED_EXECUTION_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pr-review.yml  pr-webhook-bridge.yml
artifacts/phase6/: metrics.csv  summary.json
artifacts/sample/: metrics.csv  summary.json
artifacts/verify/: findings.jsonl  metrics.csv  summary.json
artifacts/webhook/: findings.jsonl  metrics.csv  summary.json
config/: coding_standards.yaml  model_profiles.yaml  thresholds.yaml
docs/: architecture.md  presentation_outline.md
examples/: expected_review_output.json  pr_webhook_test.py  sample_diff.patch  sample_pr_payload.json
examples/bad_code/: complex_conditional.py  hardcoded_secret.py  line_length_issue.py  missing_error_handling.py  style_and_duplicate_branch.py  unsafe_exec.py
examples/bad_code_v2/: complex_condition.py  duplicate_branch.py  line_length.py  missing_handling.py  secret_and_naming.py  unsafe_eval.py
src/review_agent/: __init__.py  artifact_writer.py  comment_builder.py  diff_parser.py  github_adapter.py  main.py  models.py  review_orchestrator.py  rules_engine.py  settings.py  tracing.py  webhook_listener.py
tests/: conftest.py  test_settings.py
tests/e2e/: test_end_to_end_sample_pr.py
tests/integration/: test_github_publish.py  test_live_pr_review.py  test_webhook_ingestion.py
tests/unit/: test_agent_graph.py  test_artifact_writer.py  test_comment_builder.py  test_delegation_manager.py  test_diff_parser.py  test_llm_reviewer.py  test_llm_reviewer_rule_context.py  (+4 more)
(+23 files in other folders)
